force-app/main/default/objects/Empleados__c/Empleados__c.object-meta.xml
<CustomObject>
    <label>Empleado</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empleados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>