force-app/main/default/objects/Empleados__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admisiones</fullName>
            </value>
            <value>
                <fullName>Archivo fotográfico</fullName>
            </value>
            <value>
                <fullName>Escuelas</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Ventas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>