force-app/main/default/objects/Empleados__c/fields/Nombre_completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_completo__c</fullName>
    <formula>Name +&quot; &quot;+ Apellidos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre completo</label>
    <type>Text</type>
</CustomField>