force-app/main/default/objects/Empleados__c/fields/Tipo_empleado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_empleado__c</fullName>
    <label>Tipo empleado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coordinador/Voluntario</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Vocal</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>