force-app/main/default/objects/Empleados__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apellidos__c</columns>
    <columns>Email__c</columns>
    <columns>Tipo_empleado__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>